# kapaow

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  README.md  pyproject.toml  tox.ini
.claude/agents/: code-reviewer.md  docs-writer.md  feature-implementer.md  refactoring-agent.md  test-writer.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: cruft.yml  tests.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/gif/: generate_gif.py
examples/: C_graphene.cif  hBN-mc2d-16-enlarged-at-zero.cif  hBN-mc2d-16.cif  phosphorene.cif
src/kapaow/: __main__.py  analysis.py  animate.py  bands.py  bands_distance.py  basis.py  benchmark.py  cli.py  config.py  emit.py  extend.py  fat_bands.py  gauge.py  io.py  openmx.py  optimize.py  pareto.py  periodic_table.py  plotting.py  projectability.py  pydantic.py  rc_search.py  solve.py  symmetrize.py  version.py  workflows.py
src/kapaow/_experimental/: __init__.py  analysis.py  benchmark.py  config.py  fat_bands.py  gauge.py  optimize.py  projectability.py  symmetrize.py  workflows.py
src/kapaow/data/: __init__.py
src/kapaow/data/openmx/: __init__.py
src/kapaow/data/openmx/PAO/: C0  C0.alog  C0.ao  C6.0p.pao  C_custom.adpack.in  C_custom.openmx.in  C_custom.pao  C_example.adpack.in
src/kapaow/data/pseudodojo/: __init__.py
src/kapaow/data/sssp/: __init__.py
src/kapaow/data/sssp/espresso/: README.md  __init__.py
src/kapaow/data/sssp/espresso/gs/: Ag.pwi  Au.pwi  B.pwi  Br.pwi  C.pwi  Cl.pwi  Cr.pwi  Cs.pwi  Cu.pwi  ErN.pwi  Fe.pwi  He.pwi  Hg.pwi  HoN.pwi  I.pwi  In.pwi  Kr.pwi  LaN.pwi  Lu.pwi  LuN.pwi  Ne.pwi  Pb.pwi  PrN.pwi  Pt.pwi  Rh.pwi  Ru.pwi  S.pwi  Sb.pwi  Sc.pwi  Se.pwi  Si.pwi  SiF4.pwi  Sn.pwi  Sr.pwi  Ta.pwi  Tc.pwi  Ti.pwi  V.pwi  W.pwi  Y.pwi  (+2 more)
src/kapaow/data/sssp/espresso/oxides/: Ac-X2O5.pwi  Ag-X2O.pwi  Ag-X2O5.pwi  Ag-XO3.pwi  Al-X2O.pwi  Am-XO.pwi  Ar-X2O3.pwi  Ar-X2O5.pwi  Ar-XO2.pwi  As-X2O.pwi  As-X2O3.pwi  As-XO2.pwi  As-XO3.pwi  At-XO3.pwi  Au-X2O.pwi  Au-X2O3.pwi  Au-X2O5.pwi  Au-XO.pwi  Au-XO3.pwi  B-X2O3.pwi  B-XO.pwi  B-XO2.pwi  Ba-X2O3.pwi  Ba-XO2.pwi  Ba-XO3.pwi  Be-X2O5.pwi  Be-XO.pwi  Be-XO3.pwi  Bi-XO.pwi  Bi-XO3.pwi  Br-X2O3.pwi  Br-X2O5.pwi  Br-XO.pwi  C-X2O3.pwi  Ca-X2O.pwi  Cd-X2O5.pwi  Cd-XO2.pwi  Ce-X2O5.pwi  Ce-XO.pwi  Cl-X2O3.pwi  (+209 more)
src/kapaow/data/sssp/espresso/oxides/Ge-XO/: dft.pwo
src/kapaow/data/sssp/espresso/unaries/: Ac-Diamond.pwi  Ag-FCC.pwi  Ag-SC.pwi  Al-Diamond.pwi  Al-FCC.pwi  Al-SC.pwi  Am-SC.pwi  Ar-Diamond.pwi  Ar-FCC.pwi  Ar-SC.pwi  As-Diamond.pwi  At-BCC.pwi  B-BCC.pwi  Ba-BCC.pwi  Be-Diamond.pwi  Be-SC.pwi  Bi-BCC.pwi  Br-SC.pwi  C-Diamond.pwi  C-FCC.pwi  C-SC.pwi  Ca-BCC.pwi  Cd-BCC.pwi  Cd-FCC.pwi  Ce-BCC.pwi  Ce-SC.pwi  Cl-BCC.pwi  Cl-Diamond.pwi  Cm-Diamond.pwi  Cm-FCC.pwi  Co-BCC.pwi  Co-FCC.pwi  Cr-FCC.pwi  Cs-SC.pwi  Cu-Diamond.pwi  Cu-FCC.pwi  Cu-SC.pwi  Er-FCC.pwi  Eu-Diamond.pwi  Eu-FCC.pwi  (+115 more)
src/kapaow/data/sssp/structures/: README.md  __init__.py
src/kapaow/data/sssp/structures/unaries/: __init__.py
src/pao_plusplus/: __init__.py  __main__.py  analysis.py  animate.py  api.py  bands.py  bands_distance.py  basis.py  benchmark.py  cli.py  config.py  engine.py  espresso.py  extend.py  fat_bands.py  gauge.py  io.py  openmx.py  optimize.py  pareto.py  periodic_table.py  plotting.py  projectability.py  pydantic.py  rc_search.py  solve.py  symmetrize.py  version.py  workflows.py
src/pao_plusplus/data/: __init__.py
src/pao_plusplus/data/openmx/PAO/: C0.aden  C0.pao  C6.0p  C_custom
src/pao_plusplus/data/pseudodojo/: __init__.py
src/pao_plusplus/data/sssp/cif/: README.md
src/pao_plusplus/data/sssp/espresso/: README.md  __init__.py
src/pao_plusplus/data/sssp/espresso/gs/: Al.pwi  Ar.pwi  As.pwi  Ba.pwi  Be.pwi  Ca.pwi  Cd.pwi  Co.pwi  EuN.pwi  F.pwi  Ge.pwi  Hf.pwi  Ir.pwi  K.pwi  Li.pwi  Mn.pwi  Mo.pwi  N.pwi  Na.pwi  NdN.pwi  Ni.pwi  O.pwi  Os.pwi  P.pwi  Pd.pwi  Po.pwi  Rb.pwi  Re.pwi  Rn.pwi  Te.pwi  Tl.pwi  Xe.pwi  Zn.pwi  __init__.py
src/pao_plusplus/data/sssp/espresso/oxides/: Ag-XO.pwi  Ag-XO2.pwi  Al-X2O3.pwi  Al-XO.pwi  Al-XO2.pwi  Al-XO3.pwi  Am-X2O5.pwi  Am-XO3.pwi  Ar-XO.pwi  Ar-XO3.pwi  B-X2O.pwi  B-XO3.pwi  Ba-X2O.pwi  Ba-XO.pwi  Be-X2O.pwi  Be-X2O3.pwi  Bi-X2O.pwi  Bi-X2O3.pwi  Bi-X2O5.pwi  Bi-XO2.pwi  Br-X2O.pwi  Br-XO2.pwi  C-X2O.pwi  C-X2O5.pwi  C-XO.pwi  C-XO2.pwi  Ca-X2O5.pwi  Ca-XO.pwi  Cd-X2O.pwi  Cd-XO.pwi  Cd-XO3.pwi  Ce-X2O3.pwi  Ce-XO2.pwi  Cl-X2O.pwi  Cl-X2O5.pwi  Cm-XO.pwi  Cm-XO2.pwi  Co-X2O.pwi  Co-X2O5.pwi  Co-XO.pwi  (+144 more)
src/pao_plusplus/data/sssp/espresso/oxides/Ge-XO/: dft.pwi
src/pao_plusplus/data/sssp/espresso/unaries/: Al-BCC.pwi  Ar-BCC.pwi  As-BCC.pwi  As-FCC.pwi  As-SC.pwi  At-FCC.pwi  At-SC.pwi  Au-BCC.pwi  B-Diamond.pwi  Ba-Diamond.pwi  Ba-FCC.pwi  Ba-SC.pwi  Be-BCC.pwi  Be-FCC.pwi  Bi-FCC.pwi  Bi-SC.pwi  Br-Diamond.pwi  Ca-Diamond.pwi  Ca-FCC.pwi  Ca-SC.pwi  Cd-Diamond.pwi  Cd-SC.pwi  Ce-FCC.pwi  Cl-FCC.pwi  Cl-SC.pwi  Cm-SC.pwi  Co-Diamond.pwi  Co-SC.pwi  Cr-BCC.pwi  Cr-Diamond.pwi  Cr-SC.pwi  Cs-BCC.pwi  Cs-Diamond.pwi  Cs-FCC.pwi  Cu-BCC.pwi  Dy-BCC.pwi  Dy-FCC.pwi  Dy-SC.pwi  Er-BCC.pwi  F-Diamond.pwi  (+94 more)
src/pao_plusplus/data/sssp/structures/gs/: __init__.py
src/pao_plusplus/data/sssp/structures/oxides/: __init__.py
tests/: __init__.py  conftest.py  fixtures.py  test_bands.py  test_bands_distance.py  test_basis.py  test_cli.py  test_emit.py  test_extend.py  test_io.py  test_io_extended.py  test_openmx.py  test_pareto.py  test_solve.py  test_symmetrize.py  test_version.py
tests/data/pao_files/: test_element.pao
