[build-system]
requires = ["uv_build>=0.6.6,<1.0"]
build-backend = "uv_build"

[project]
name = "kapaow"
version = "0.0.1-dev"
description = "Find optimal pseudoatomic orbitals for representing bands in bulk systems"
readme = "README.md"
authors = [
    { name = "Edward Linscott", email = "edwardlinscott@gmail.com" }
]
maintainers = [
    { name = "Edward Linscott", email = "edwardlinscott@gmail.com" }
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
# Search tags using the controlled vocabulary at https://pypi.org/classifiers
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Framework :: tox",
    "Framework :: Sphinx",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
]
keywords = [
    "snekpack", # please keep this keyword to credit the cookiecutter-snekpack template
    "cookiecutter",
    # TODO add your own free-text keywords
]

# License Information.
# See PEP-639 at https://peps.python.org/pep-0639/#add-license-files-key
license-files = [
    "LICENSE",
]

requires-python = ">=3.12"
dependencies = [
    # Numerical / scientific stack
    "numpy",
    "scipy",
    "matplotlib",
    "ase",
    "h5py",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "Pillow",
    # Pseudoatomic solver + UPF parsing
    "atomic-femdvr",
    "upf-tools",
    # Periodic table / Bokeh plotting + SVG/PNG/PDF export
    "bokeh",
    "periodic_trends @ git+https://github.com/Andrew-S-Rosen/periodic_trends.git",
    "selenium>=4.38.0",
    "chromedriver-binary>=144.0.7523.0.0",
    "cairosvg>=2.8.2",
    # Validation + CLI
    "pydantic",
    "tqdm",
    "click",
    "typing-extensions",
]

# see https://peps.python.org/pep-0735/ and https://docs.astral.sh/uv/concepts/dependencies/#dependency-groups
[dependency-groups]
tests = [
    "pytest",
    "coverage[toml]",
]
docs = [
    "sphinx>=8",
    "sphinx-rtd-theme>=3.0","sphinx-click",
    "sphinx_automodapi",
    # Include if your project uses Pydantic:
    # "autodoc_pydantic",
    # To include LaTeX comments easily in your docs.
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext
]
lint = [
    "ruff",
]
pylint = [
    { include-group = "tests" },
    "pylint",
]
typing = [
    { include-group = "tests" },
    "mypy",
    "pydantic",
    "click-types",
    # You will probably have to add additional type stubs here, especially if you're using tox-uv
]
docs-lint = [
    { include-group = "docs" },
    "doc8",
]
format-docs = [
    { include-group = "docs" },
    "docstrfmt",
]
doctests = [
    "xdoctest",
    "pygments",
]
pyroma = [
    "pyroma",
    "pygments",
]
# follow https://github.com/astral-sh/uv/issues/6298 for switching to a uv-based version bump workflow
bump = [
    "bump-my-version",
]
build = [
    "uv",
    "uv-build",
]
release = [
    { include-group = "build" },
    "uv",
    "keyring",
]

# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
[project.optional-dependencies]
# Pull in the AiiDA + Quantum ESPRESSO + Wannier90 stack used by
# kapaow._experimental (benchmark, fat bands, gauge analysis, Bayesian
# projectability optimisation, etc.). Required only if you want any of
# the experimental subcommands or the corresponding Python entry points.
experimental = [
    "aiida-koopmans",
    "aiida-wannier90",
    "ase-koopmans",
    "bayesian-optimization>=3.1.0",
    "koopmans",
    "qe-wavefunctions",
    "scikit-image",
]


# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
# and also https://packaging.python.org/en/latest/specifications/well-known-project-urls/
[project.urls]
"Bug Tracker" = "https://github.com/pseudopotential-tools/kapaow/issues"
Homepage = "https://github.com/pseudopotential-tools/kapaow"
Repository = "https://github.com/pseudopotential-tools/kapaow.git"
Documentation = "https://kapaow.readthedocs.io"
Funding = "https://github.com/sponsors/elinscott"

[project.scripts]
kapaow = "kapaow.cli:main"

[tool.cruft]
skip = [
    "**/__init__.py",
    "tests/*"
]

# MyPy, see https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
plugins = [
    "pydantic.mypy",
]

# Doc8, see https://doc8.readthedocs.io/en/stable/readme.html#ini-file-usage
[tool.doc8]
max-line-length = 120

# Pytest, see https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage, see https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
source = [
    "kapaow",
]
omit = [
    "tests/*",
    "docs/*",
    "src/kapaow/version.py",
    "src/kapaow/__main__.py",
    "src/kapaow/cli.py",
]

[tool.coverage.paths]
source = [
    "src/kapaow",
    ".tox/*/lib/python*/site-packages/kapaow",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules
extend-select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "C90", # mccabe
    "I", # isort
    "UP", # pyupgrade
    "D", # pydocstyle
    "DOC", # pydoclint
    "B", # bugbear
    "S", # bandit
    "T20", # print
    "N", # pep8 naming
    "ERA", # eradicate commented out code
    "NPY", # numpy checks
    "RUF", # ruff rules
    "C4", # comprehensions
]
ignore = [
    "D105", # Missing docstring in magic method
    "E203", # Black conflicts with the following
    "E741", # l not allowed as a variable
    "RUF001", # Ambiguous unicode in string
    "RUF003", # Ambiguous unicode in comment
]

# See https://docs.astral.sh/ruff/settings/#per-file-ignores
[tool.ruff.lint.per-file-ignores]
# Ignore security issues in the version.py, which are inconsistent
"src/kapaow/version.py" = ["S603", "S607"]
# Ignore commented out code in Sphinx configuration file
"docs/source/conf.py" = ["ERA001"]
# Prints are okay in notebooks
"notebooks/**/*.ipynb" = ["T201"]
# Allow assert within tests
"tests/**/*.py" = ["S101"]
# Math-heavy modules: uppercase variable/argument names are mathematical convention
# (B, D, M, U, R, S, etc. denote matrices)
"**/symmetrize.py" = ["N803", "N806"]
"**/test_symmetrize.py" = ["N803", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-third-party = [
    "tqdm",
]
known-first-party = [
    "kapaow",
    "tests",
]

[tool.ruff.format]
# see https://docs.astral.sh/ruff/settings/#format_docstring-code-format
docstring-code-format = true

[tool.bumpversion]
current_version = "0.0.1-dev"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?(?:\\+(?P<build>[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?"
serialize = [
    "{major}.{minor}.{patch}-{release}+{build}",
    "{major}.{minor}.{patch}+{build}",
    "{major}.{minor}.{patch}-{release}",
    "{major}.{minor}.{patch}",
]
commit = true
tag = false

[tool.bumpversion.parts.release]
optional_value = "production"
first_value = "dev"
values = [
    "dev",
    "production",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = "release = \"{current_version}\""
replace = "release = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/kapaow/version.py"
search = "VERSION = \"{current_version}\""
replace = "VERSION = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[tool.pylint]
# Be slightly more lenient than default
fail-under = 9.75
max-args = 7
max-positional-arguments = 7

[tool.pylint.typecheck]
signature-mutators = [
    "click.decorators.option",
    "click.decorators.argument",
    "click.decorators.version_option",
    "click.decorators.help_option",
    "click.decorators.pass_context",
    "click.decorators.confirmation_option"
]

[tool.uv.sources]
qe-wavefunctions = { path = "../schueler/QE-wavefunctions", editable = true }
ase-koopmans = { path = "../ase_koopmans" }
koopmans = { path = "../koopmans2", editable = true }
aiida-koopmans = { path = "../aiida-koopmans2", editable = true }
atomic-femdvr = { path = "../schueler/atomic-femdvr" }
aiida-wannier90 = { path = "../aiida-wannier90" }
